2004-03-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* XForms 1.0.90 released
	
	* NEWS: 
	* README: update for 1.0.90

	* configure.ac: set version to 1.0.90. Use XFORMS_CHECK_VERSION

	* config/xformsinclude.m4 (XFORMS_CHECK_VERSION): merge
	XFORMS_SET_VERSION and XFORMS_CHECK_VERSION. Set PACKAGE here and
	read version from PACKAGE_VERSION (set by AC_INIT). Remove
	detection of prereleases. Development versions are now versions
	with minor version number >= 50.

	* README: small update

	* configure.ac: add new define RETSIGTYPE_IS_VOID
	
	* lib/signal.c: fix handling of RETSIGTYPE

2003-12-02  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Makefile.am: enable 'make -j2' to work on a
	multi-processor machine.

	* demos/Makefile.am: handle the .fd -> .c conversion in
	automake-standard fashion.

	* lib/include/Makefile.am: pass sed the names of the files to
	be manipulated as '${srcdir}/`basename $$i`' rather than as
	'${srcdir}/$$i' or things go awol on the Dec. (Running ksh, fwiw.)

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* Makefile.am: re-add xforms.spec to EXTRA_DIST. It is needed as well
	as xforms.spec.in or else 'make rpmdist' will fail.

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_attribs.c:
	* image/image_jpeg.c:
	* image/image_xwd.c:
	* lib/flcolor.c: warning free compilation of the entire xforms source.

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/demotest.c:
	* demos/folder.c:
	* demos/free1.c:
	* demos/group.c:
	* demos/popup.c:
	* demos/wwwl.c:
	* demos/xyplotall.c:
	* demos/fd/scrollbar_gui.fd: squash all remaining warnings when
	compiling the demos directory '-W -Wall -Wno-unused-parameter'.

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* Makefile.am:
	* configure.ac: compile fd2ps after fdesign. Will allow me to get rid
	of the files generated from the .fd files.

2003-11-27  Angus Leeming  <angus.leeming@btopenworld.com>
